my-react-app/src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #000000;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* dark mode color vars */
  --padborder-color: #FFFFFF;
  --yellow: #E3A018;
  --blue: #3300FF;
  --purple: #330088;
  --pink: #FF69B4;
  --gray: #222222;
}

#root {
  padding-bottom: 50px;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  /* place-items: center; */
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    background-color: #ffffff;
    --padborder-color: #000000;
    --yellow: #FFDB58;
    --blue: #69D2E7;
    --purple: #C4A1FF;
    --pink: #FFB2EF;
    --gray: #AAAAAA;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

.hstack {
  padding: 1em;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

@media (max-width: 700px) {
  .hstack {
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
  }

}

.vstack {
  padding: 1em;
  display: flex;
  flex-direction: column;
}

